feat:打印照片和HTML

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,7 @@
     <string name="camero_test">自定义相机</string>
     <string name="send_photo_album">存放到相册</string>
     <string name="compress_photo">压缩图片</string>
+    <string name="print_photo">打印图片</string>
+    <string name="print_html">打印HTML</string>
 
 </resources>
